chore: endre workflow til å bygge redaktørens utkast frå develop branch

--- a/.github/workflows/adocs-build-develop.yml
+++ b/.github/workflows/adocs-build-develop.yml
@@ -1,9 +1,9 @@
-name: build adocs
+name: build adocs develop
 
 on:
   push:
     branches:
-    - review
+    - develop
 jobs:
   adoc_build:
     runs-on: ubuntu-18.04
