--- a/.github/workflows/adocs-build-master.yml
+++ b/.github/workflows/adocs-build-master.yml
@@ -1,9 +1,12 @@
-name: build adocs
+name: build adocs master
 
 on:
   push:
     branches:
     - master
+    paths:
+    - docs/**
+
 jobs:
   adoc_build:
     runs-on: ubuntu-18.04
